--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mis Finanzas</title>
-  <link href="style.css" rel="stylesheet" />
-</head>
-<body>
-  <div id="root"></div>
-  <script type="module" src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Mis Finanzas</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-gray-100">
+
+    <!-- Sidebar y contenido -->
+    <div class="flex">
+      <!-- Sidebar se renderiza desde Sidebar.js -->
+      <div id="sidebar"></div>
+
+      <!-- Contenido principal -->
+      <main id="main-content" class="ml-64 p-4 w-full"></main>
+    </div>
+
+    <script type="module" src="./app.js"></script>
+  </body>
 </html>
