--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
+<!DOCTYPE html><html lang="es"><head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mis Finanzas</title>
   <link href="style.css" rel="stylesheet" />
-</head>
-<body>
+</head><body>
   <div id="root"></div>
   <script type="module" src="app.js"></script>
-</body>
-</html>
+</body></html>
