--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-<!DOCTYPE html><html lang="es"><head>
+<!DOCTYPE html>
+<html lang="es">
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mis Finanzas</title>
   <link href="style.css" rel="stylesheet" />
-</head><body>
-  <div id="root"></div>
+</head>
+<body style="display: flex; margin: 0; height: 100vh;">
+
+  <!-- Sidebar para la navegación -->
+  <div id="sidebar" style="width: 250px; background-color: #f3f4f6; box-shadow: 2px 0 5px rgba(0,0,0,0.1);"></div>
+
+  <!-- Contenedor principal para mostrar las calculadoras y dashboard -->
+  <main id="main" style="flex: 1; padding: 20px; overflow-y: auto;"></main>
+
   <script type="module" src="app.js"></script>
-</body></html>
+</body>
+</html>
