--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body style="display: flex; margin: 0; height: 100vh;">
 
   <!-- Sidebar para la navegación -->
-  <div id="sidebar" style="width: 250px; background-color: #f3f4f6; box-shadow: 2px 0 5px rgba(0,0,0,0.1);"></div>
+  <div id="sidebar" class="sidebar"><!-- ✅ MODIFICADO: se aplicó clase de sidebar --></div>
 
   <!-- Contenedor principal para mostrar las calculadoras y dashboard -->
-  <main id="main" style="flex: 1; padding: 20px; overflow-y: auto;"></main>
+  <main id="main" class="calculator"><!-- ✅ MODIFICADO: clase 'calculator' para aplicar estilos nuevos --></main>
 
   <script type="module" src="app.js"></script>
 </body>
