--- a/dashboard.html
+++ b/dashboard.html
@@ -1,25 +1,27 @@
-<section class="dashboard-cards">
+<section class="dashboard-cards" role="region" aria-labelledby="dashboard-title">
+  <h2 id="dashboard-title" class="sr-only">Resumen del negocio</h2>
+
   <div class="card-box bg-blue">
     <h3 id="ventasPromedio">--</h3>
     <p>Ventas promedio</p>
-    <a href="#">Más info <span>→</span></a>
+    <a href="#"><span>Más info</span> →</a>
   </div>
 
   <div class="card-box bg-green">
     <h3 id="stockVsIdeal">--</h3>
     <p>Stock actual vs ideal</p>
-    <a href="#">Más info <span>→</span></a>
+    <a href="#"><span>Más info</span> →</a>
   </div>
 
-  <div class="card-box bg-yellow">
+  <div class="card-box bg-orange">
     <h3 id="rentabilidad">--</h3>
     <p>Rentabilidad</p>
-    <a href="#">Más info <span>→</span></a>
+    <a href="#"><span>Más info</span> →</a>
   </div>
 
   <div class="card-box bg-red">
     <h3 id="pl">--</h3>
     <p>Pérdidas y Ganancias</p>
-    <a href="#">Más info <span>→</span></a>
+    <a href="#"><span>Más info</span> →</a>
   </div>
 </section>
