--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,7 @@
+<section class="upload-section">
+  <label for="uploadFile">📤 Subí tu archivo Excel (.xlsx):</label>
+  <input type="file" id="uploadFile" accept=".xlsx" />
+</section>
 <section class="dashboard-cards" role="region" aria-labelledby="dashboard-title">
   <h2 id="dashboard-title" class="sr-only">Resumen del negocio</h2>
 
